Added missing doc directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,8 +116,10 @@ endif()
 if(MSVC)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
     add_definitions(-Dinline=__inline)
-    #add_definitions(-Dsnprintf=_snprintf)
-    #add_definitions(-Dstrncasecmp=_strnicmp)
+    if (MSVC_VERSION LESS 1900)
+      add_definitions(-Dsnprintf=_snprintf)
+      add_definitions(-Dstrncasecmp=_strnicmp)
+    endif()
 endif()
 
 add_library(cjson SHARED lua_cjson.c strbuf.c ${FPCONV_SOURCES})
